# docs/swagger.json
@@ -77,10 +77,24 @@
                 }
             }
         },
-        "/user/getUserList": {
-            "get": {
+        "/user/findUserByNameAndPassoword": {
+            "post": {
                 "tags": [
                     "用户模块"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "formData"
+                    }
                 ],
                 "responses": {
                     "200": {
