# models/user_basic.go
@@ -42,6 +42,12 @@ func GetUserList() []*UserBasic {
 	return data
 }
 
+func FindUserByNameAndPassoword(name string, password string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ? and pass_word = ?", name, password).First(&user)
+	return user
+}
+
 func FindUserByName(name string) UserBasic {
 	user := UserBasic{}
 	utils.DB.Where("name = ?", name).First(&user)
